--- a/被社会遗忘的人.md
+++ b/被社会遗忘的人.md
@@ -21,3 +21,7 @@
 ###Reference:
 1. [被遗忘的人们 Los Olvidados (1950)](http://movie.douban.com/subject/1303579/)
 2. [放牛班的春天 Les choristes](http://movie.douban.com/subject/1291549/)
+
+###人物
+- 吕楠 - 摄影师
+- 栗宪庭 - 艺术批评家
